--- a/.github/workflows/foresight.yml
+++ b/.github/workflows/foresight.yml
@@ -44,25 +44,22 @@ jobs:
 
     - name: Add XunitXML dependency
       run: |
-        echo "
-        regex='PackageReference Include=\"([^\"]*)\" Version=\"([^\"]*)\"'
-        find . -name \"*.*proj\" | while read proj
+        regex='PackageReference Include="([^"]*)" Version="([^"]*)"'
+        find . -name "*.*proj" | while read proj
         do
           while read line
           do
-            if [[ \$line =~ \$regex ]]
+            if [[ $line =~ $regex ]]
+          then
+            name="${BASH_REMATCH[1]}"
+            version="${BASH_REMATCH[2]}"
+            if [[ $version != *-* ]]
             then
-              name=\"\${BASH_REMATCH[1]}\"
-              version=\"\${BASH_REMATCH[2]}\"
-              if [[ $version != *-* ]]
-              then
-                dotnet add \$proj package XunitXml.TestLogger --version 3.0.70
-              fi
+              dotnet add $proj package XunitXml.TestLogger --version 3.0.70
             fi
-          done < \$proj
-        done" > add-xunitxml-dependency.sh
-        sudo ./add-xunitxml-dependency.sh
-
+          fi
+          done < $proj  
+        done
 
     - name: Test
       run: dotnet test ./src/GraphQL.sln --logger:xunit
