--- a/.github/workflows/foresight.yml
+++ b/.github/workflows/foresight.yml
@@ -7,7 +7,9 @@ on:
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:
-
+env:
+  FORESIGHT_UPLOADER_SIGNER_URL: https://upload.thundra.us
+  
 jobs:
   build:
 
