--- a/.github/workflows/foresight.yml
+++ b/.github/workflows/foresight.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 env:
   FORESIGHT_UPLOADER_SIGNER_URL: https://upload.thundra.us
-  
+  WORKFLOW_TELEMETRY_BASE_URL: https://foresight.service.thundra.us 
 jobs:
   build:
 
