--- a/.github/workflows/foresight.yml
+++ b/.github/workflows/foresight.yml
@@ -14,6 +14,7 @@ env:
   BRANCH_NAME: auto-upstream-merge
   FORESIGHT_UPLOADER_SIGNER_URL: https://upload.service.runforesight.us
   WORKFLOW_TELEMETRY_BASE_URL: https://api.service.runforesight.us
+  FORESIGHT_LOG_LEVEL: DEBUG
   
 jobs:
   build:
